unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/Salesforce_Rewind_History_Record__c.object-meta.xml
<CustomObject>
    <description>Used to store a history of changes to the Salesforce Org</description>
    <label>Salesforce Rewind History Record</label>
    <nameField>
        <displayFormat>SRHR-{0000}</displayFormat>
        <label>SRHR No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Rewind History Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>