unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/fields/New_Values__c.field-meta.xml
<CustomField>
    <fullName>New_Values__c</fullName>
    <label>New Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>