unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/fields/Old_Values__c.field-meta.xml
<CustomField>
    <fullName>Old_Values__c</fullName>
    <label>Old Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>