unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <formula>HYPERLINK( RecordId__c , Record_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>