unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>