unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
                <default>true</default>
                <label>Done</label>
            </value>
            <value>
                <fullName>Undone</fullName>
            </value>
            <value>
                <fullName>Undoable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>