unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IF( TEXT( Status__c ) == &#39;Undone&#39;, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;Undone&quot;),
IF ( TEXT( Status__c ) == &#39;Undoable&#39;, IMAGE(&quot;/img/permissions_deny16.gif&quot;,  Error__c ),&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>