unpackaged/main/default/objects/Salesforce_Rewind_History_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SObject__c</columns>
    <columns>Record__c</columns>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>Action__c</columns>
    <columns>RecordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>